# calcustavkirza

./: .gitignore  Project.py  characts.py  functions.py  main.py  pyproject.toml  res.py
calcustavkirza/: Calc.py  Characteristic.py  Isc.py  Net.py  Pris.py  Project.py  Settting.py  classes.py  electro_store.py  floc.py  functions.py
calcustavkirza/calcsc/: Isc.py  calc_pu.py  calc_sc_dc.py  gen.py  trafo.py
calcustavkirza/protections/: AutoReclose.py  Avr.py  BFP.py  CTS.py  ControlBFP.py  DZSH.py  EF.py  EF4PTOC.py  EFdir.py  LZSH.py  MTZ.py  MTZSVG.py  T3WPDIF.py  TO.py  TOSVG.py  ZMQPDIS.py  diff.py  imbalance.py  overload.py  voltage.py
calcustavkirza/select/: CT.py  Cable.py  DC.py  QF.py  VT.py  devices.py  load.py
calcustavkirza/select/characteristics/: CHINT NXM-630_400max.json  CHINT NXM-630_400min.json  CHINT coords.json  CHINT_NM8N_400HV_TM_max.json  CHINT_NM8N_400HV_TM_min.json  CHINT_NM8N_ENmax6s.json  CHINT_NM8N_ENmin6s.json
source/: Polimir_all.rst  conf.py
source/_static/: sign.dwg
tests/: test_Characterisic.py  test_Isc.py  test_ct_saturation.py
